--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
 
-    "name": "Force Sub Bot",
 
-    "description": "Python based bot to Force Users to sub a channel.",
+
+    "description": "Lamao",
 
     "logo": "",
 
@@ -16,11 +16,11 @@
 
     ],
 
-    "repository": "https://github.com/xditya/ForceSub",
+    "repository": "https://github.com/msy1717/geybotxd",
 
-    "website": "xditya.me",
+    "website": "godmrunal.me",
 
-    "success_url": "https://t.me/BotzHub",
+    "success_url": "https://t.me/BeastXbots",
 
     "env": {
 
