--- a/app.json
+++ b/app.json
@@ -24,7 +24,7 @@
 
     "env": {
 
-        "API_HASH": {
+        "DB_URI": {
 
             "description": "You API HASH from my.telegram.org",
 
@@ -32,7 +32,7 @@
 
         },
 
-        "API_ID": {
+        "MODE": {
 
             "description": "You API ID from my.telegram.org",
 
@@ -48,7 +48,7 @@
 
         },
 
-        "CHANNEL": {
+        "TOKEN": {
 
             "description": "Channel @username for force join.",
 
@@ -56,7 +56,7 @@
 
         },
 
-        "WELCOME_MSG": {
+        "CHAT_ID_FORWARD": {
 
             "description": "The welcome message to display. Can be formatted with {mention}, {title}, {fullname}, {username}, {name}, {last}, {channel}.",
 
@@ -64,7 +64,7 @@
 
         },
 
-        "WELCOME_NOT_JOINED": {
+        "PORT": {
 
             "description": "The welcome message to display if user hasn't joined the channel. Can be formatted with {mention}, {title}, {fullname}, {username}, {name}, {last}, {channel}.",
 
@@ -72,7 +72,7 @@
 
         },
 
-        "ON_JOIN": {
+        "HEROKU_APP_NAME": {
 
             "description": "True/False. To configure if user must be muted directly on joining",
 
